bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: not found: value While
While (fini != true) {if (!estSurMessage()) fini = true
^